--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry]
 name = "rag-service"
 version = "0.1.0"
-description = "Toy RAG pipeline (FastAPI + pgvector)"
+description = "RAG Pipeline"
 authors = ["liuhaochen <liu_hao_chen@hotmail.com>"]
 readme = "README.md"
 packages = [{ include = "rag_service", from = "src" }]
@@ -22,6 +22,8 @@ pgvector = "^0.3.6"
 tenacity = "^9.0.0"
 httpx = "^0.27.2"
 orjson = "^3.10.11"
+alembic = "^1.11.1"
+sqlmodel = "^0.0.22"
 
 [tool.poetry.group.notebook]
 optional = true
@@ -55,4 +57,3 @@ python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
-
