--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,13 @@ sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
 asyncpg = "^0.30.0"
 pgvector = "^0.3.6"
 tenacity = "^9.0.0"
-httpx = "^0.27.2"
+httpx = "^0.28.1"
 orjson = "^3.10.11"
 alembic = "^1.11.1"
 sqlmodel = "^0.0.22"
+llama-index-core = "^0.14.12"
+llama-index-embeddings-google-genai = "^0.3.1"
+llama-index-vector-stores-postgres = "^0.7.2"
 
 [tool.poetry.group.notebook]
 optional = true
