--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ llama-index-core = "^0.14.12"
 llama-index-embeddings-google-genai = "^0.3.1"
 llama-index-vector-stores-postgres = "^0.7.2"
 langchain-text-splitters = "^1.1.0"
+voyageai = "^0.3.7"
 
 [tool.poetry.group.notebook]
 optional = true
